Corrected .jumbrotron-main height on mobile

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
     padding-left:0px;
     padding-right:0px;
     background-color:rgb(0,32,32);
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     min-height:100vh;
 }
 
@@ -444,7 +444,7 @@ a:link {
 
     .jumbotron-main{
         width:100%;
-        height:fit-content;
+        height: 100%;
         padding:2vw;
         border-radius: 0;
     }
